PLF-176 tomcat and jbossas pkg build memory increased to -Xmx=2g -XX:MaxPermSize=512M