@@ -332,7 +332,8 @@
                               <argument>-Dexo.m2.home=${maven.home}</argument>
                               <argument>-Xshare:auto</argument>
                               <argument>-Xms128m</argument>
-                              <argument>-Xmx1024m</argument>
+                              <argument>-Xmx2g</argument>
+                              <argument>-XX:MaxPermSize=512M</argument>		
                               <argument>-classpath</argument>
                               <argument>${basedir}/target/exopackage/lib/js.jar</argument>
                               <argument>org.mozilla.javascript.tools.shell.Main</argument>
@@ -431,7 +432,8 @@
                               <argument>-Dexo.m2.home=${maven.home}</argument>
                               <argument>-Xshare:auto</argument>
                               <argument>-Xms128m</argument>
-                              <argument>-Xmx512m</argument>
+                              <argument>-Xmx2g</argument>
+                              <argument>-XX:MaxPermSize=512M</argument>		
                               <argument>-classpath</argument>
                               <argument>${basedir}/target/exopackage/lib/js.jar</argument>
                               <argument>org.mozilla.javascript.tools.shell.Main</argument>
